fix image width when too big

--- a/css/posts.styl
+++ b/css/posts.styl
@@ -22,5 +22,6 @@
       > img
         display: block
         max-height: 400px
+        width: auto
       > .date
         line-height: 36px
